Fix disabled search bar stretching incorrectly

--- a/Source/Plugins/Core/com.equella.core/resources/web/css/ie11compat.css
+++ b/Source/Plugins/Core/com.equella.core/resources/web/css/ie11compat.css
@@ -2,3 +2,6 @@
   /* Support for IE */
   font-feature-settings: "liga";
 }
+input[disabled="disabled"] {
+  position: absolute;
+}
